feat: add matchController
