# src/routes/v1/teams.routes.js
@@ -4,6 +4,7 @@ import TeamController from '../../controllers/TeamController';
 const teamRoutes = new Router();
 
 teamRoutes.get('/teams', TeamController.index);
+teamRoutes.get('/teams/members', TeamController.playersOfTeams);
 teamRoutes.get('/team/:id', TeamController.getById);
 teamRoutes.post('/team', TeamController.create);
 teamRoutes.post('/team/member', TeamController.addTeamMember);
